seed db with copper - need to add a new column

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav>
    <div class="nav-wrapper">
-     <%= link_to "CO SNOW", root_path, class: "brand-logo nudge-right" %>
+     <%= link_to "CO Snow", root_path, class: "brand-logo nudge-right" %>
      <ul id="nav-mobile" class="right hide-on-med-and-down nudge-left">
        <li> <%= link_to "Sign in", login_path %></li>
      </ul>
