--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Hi!</h1>
 
 <%= link_to "Copper Mountain", resort_path("copper-mountain") %>
+<br>
+<%= link_to "Massif du Sud", resort_path("massif-du-sud") %>
