--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,7 @@
-@import "materialize/components/color";
-$primary-color: #0D4F4A !default;
-$secondary-color: #0D4F4A;
-$tertiary-color: #241858;
-@import "materialize";
-@import "materialize/extras/nouislider";
+$primaryColor: #0D4F4A !default;
+$secondaryColor: #0D4F4A;
+$tertiaryColor: #241858;
+@import "semantic-ui";
 
 .nudge-left {
   margin-right: 25px;
