--- a/app/views/resorts/show.html.erb
+++ b/app/views/resorts/show.html.erb
@@ -1,1 +1,48 @@
-<h2> <%= @weather.resort.name %> Forecast</h2>
+<h1> <%= @weather.resort.name %> Forecast</h1>
+
+<h2>Right Now:</h2>
+<h1><%= @weather.current_temp%>°F and <%= @weather.current_condition%></h1>
+<p>Feels like: <%= @weather.current_feels_like_temp%>°F</p>
+<table class="ui orange table center aligned collapsing">
+  <thead>
+    <tr><th>Current (°F)</th>
+      <th>High (°F)</th>
+      <th>Low (°F)</th>
+    </tr></thead><tbody>
+      <tr>
+        <td><p><%= @weather.current_temp%></p></td>
+        <td><%= @weather.todays_max%></td>
+        <td><%= @weather.todays_min%></td>
+      </tr>
+    </tbody>
+  </table>
+  <p>Chance of Snow: <%= @weather.current_precip_prob %>% with <%= @weather.current_precip_intensity%>"</p>
+
+<h2>Next Hour:</h2>
+  <p><%= @weather.next_hour_summary%></p>
+<h2>Next 24 Hours:</h2>
+  <p><%= @weather.next_24_hour_summary%></p>
+<h2>Next 7 Days: </h2>
+  <p><%= @weather.week_summary%></p>
+
+  <table class="ui orange table center aligned collapsing">
+    <thead>
+      <tr><th>Day</th>
+        <th>Snow Probabilty (%)</th>
+        <th>Accumulation (in)</th>
+        <th>High (°F)</th>
+        <th>Low (°F)</th>
+        <th>Summary</th>
+      </tr></thead><tbody>
+        <% @weather.daily_forecast.data.each_with_index do |day, index| %>
+        <tr>
+          <td><p><%= (Time.now + index.day).strftime("%a, %b %e")%></p></td>
+          <td><%= (day.fetch("precipProbability").to_f * 100).to_i%></td>
+          <td><%= day.fetch("precipAccumulation").to_i%>"</td>
+          <td><%= day.fetch("temperatureMax").to_i%></td>
+          <td><%= day.fetch("temperatureMin").to_i%></td>
+          <td><%= day.fetch("summary")%></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
