--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="ui top attached large menu">
+<div class="ui top attached large menu push-down">
   <div class="ui simple dropdown icon item">
     <i class="tree icon">  Colorado Powder Forecast</i>
     <div class="menu">
