--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,17 @@ $tertiaryColor: #241858;
 .push-down {
   margin-bottom: 25px !important;
 }
+
+.bold {
+  font-weight: 600;
+  font-size: larger;
+}
+
+.numberCircle {
+    border-radius: 50%;
+
+    border: 2px solid #666;
+    color: #666;
+    text-align: center;
+
+}
